--- a/render.yaml
+++ b/render.yaml
@@ -12,25 +12,12 @@ services:
 #    sync: false
 #  - key: LINE_CHANNEL_SECRET
 #    sync: false
- - type: web
-   name: line-bot-python-flask-with-handler
-   env: python
-   repo: https://github.com/line/line-bot-sdk-python.git
-   buildCommand: cd examples/flask-echo;pip install gunicorn -r requirements.txt
-   startCommand: cd examples/flask-echo;gunicorn app_with_handler:app
-   plan: free
-   autoDeploy: false
-   envVars:
-   - key: LINE_CHANNEL_ACCESS_TOKEN
-     sync: false
-   - key: LINE_CHANNEL_SECRET
-     sync: false
 # - type: web
-#   name: line-bot-python-flask-kitchensink
+#   name: line-bot-python-flask-with-handler
 #   env: python
 #   repo: https://github.com/line/line-bot-sdk-python.git
-#   buildCommand: cd examples/flask-kitchensink;pip install gunicorn -r requirements.txt
-#   startCommand: cd examples/flask-kitchensink;gunicorn app:app
+#   buildCommand: cd examples/flask-echo;pip install gunicorn -r requirements.txt
+#   startCommand: cd examples/flask-echo;gunicorn app_with_handler:app
 #   plan: free
 #   autoDeploy: false
 #   envVars:
@@ -38,6 +25,19 @@ services:
 #     sync: false
 #   - key: LINE_CHANNEL_SECRET
 #     sync: false
+ - type: web
+   name: line-bot-python-flask-kitchensink
+   env: python
+   repo: https://github.com/anh1008/line-bot-sdk-python-original.git
+   buildCommand: cd examples/flask-kitchensink;pip install gunicorn -r requirements.txt
+   startCommand: cd examples/flask-kitchensink;gunicorn app:app
+   plan: free
+   autoDeploy: false
+   envVars:
+   - key: LINE_CHANNEL_ACCESS_TOKEN
+     sync: false
+   - key: LINE_CHANNEL_SECRET
+     sync: false
 # - type: web
 #   name: line-bot-python-simple-server
 #   env: python
