--- a/render.yaml
+++ b/render.yaml
@@ -25,12 +25,25 @@ services:
 #     sync: false
 #   - key: LINE_CHANNEL_SECRET
 #     sync: false
+# - type: web
+#   name: line-bot-python-flask-kitchensink
+#   env: python
+#   repo: https://github.com/anh1008/line-bot-sdk-python-original.git
+#   buildCommand: cd examples/flask-kitchensink;pip install gunicorn -r requirements.txt
+#   startCommand: cd examples/flask-kitchensink;gunicorn app:app
+#   plan: free
+#   autoDeploy: false
+#   envVars:
+#   - key: LINE_CHANNEL_ACCESS_TOKEN
+#     sync: false
+#   - key: LINE_CHANNEL_SECRET
+#     sync: false
  - type: web
-   name: line-bot-python-flask-kitchensink
+   name: line-bot-python-simple-server
    env: python
-   repo: https://github.com/anh1008/line-bot-sdk-python-original.git
-   buildCommand: cd examples/flask-kitchensink;pip install gunicorn -r requirements.txt
-   startCommand: cd examples/flask-kitchensink;gunicorn app:app
+   repo: https://github.com/line/line-bot-sdk-python.git
+   buildCommand: cd examples/simple-server-echo;pip install -r requirements.txt
+   startCommand: cd examples/simple-server-echo;python app.py
    plan: free
    autoDeploy: false
    envVars:
@@ -38,29 +51,16 @@ services:
      sync: false
    - key: LINE_CHANNEL_SECRET
      sync: false
-# - type: web
-#   name: line-bot-python-simple-server
-#   env: python
-#   repo: https://github.com/line/line-bot-sdk-python.git
-#   buildCommand: cd examples/simple-server-echo;pip install -r requirements.txt
-#   startCommand: cd examples/simple-server-echo;python app.py
-#   plan: free
-#   autoDeploy: false
-#   envVars:
-#   - key: LINE_CHANNEL_ACCESS_TOKEN
-#     sync: false
-#   - key: LINE_CHANNEL_SECRET
-#     sync: false
-# - type: web
-#   name: line-bot-python-aiohttp
-#   env: python
-#   repo: https://github.com/line/line-bot-sdk-python.git
-#   buildCommand: cd examples/aiohttp-echo;pip install -r requirements.txt
-#   startCommand: cd examples/aiohttp-echo;python app.py
-#   plan: free
-#   autoDeploy: false
-#   envVars:
-#   - key: LINE_CHANNEL_ACCESS_TOKEN
-#     sync: false
-#   - key: LINE_CHANNEL_SECRET
-#     sync: false
+ - type: web
+   name: line-bot-python-aiohttp
+   env: python
+   repo: https://github.com/line/line-bot-sdk-python.git
+   buildCommand: cd examples/aiohttp-echo;pip install -r requirements.txt
+   startCommand: cd examples/aiohttp-echo;python app.py
+   plan: free
+   autoDeploy: false
+   envVars:
+   - key: LINE_CHANNEL_ACCESS_TOKEN
+     sync: false
+   - key: LINE_CHANNEL_SECRET
+     sync: false
